---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 05. 09. 2021
  Contributions:
    - moolex fixed unchecking use equipment breaking on lite artillery technology
  Tweaks:
    - Reduced mortar cooldown by %50
    - Increased the rate that mending wall events are processed to every 5 ticks

---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 24. 04. 2021
  Integrations:
    - When RPGSystem is active the health research from Rampant arsenal is hidden
  Tweaks:
    - Increased rocket turrets minimum ranges by 5 and max range by 2
    - Reduced shotgun turret damage bonus by 50%
    - Increased min range on capsule turret by 5 and max range by 3
  Bugfixes:
    - Added check for artillery sound changes

---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 17. 04. 2021
  Contributions:
    - MakaronP has provided an bugfix for the updated RU locale

---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 16. 04. 2021
  Contributions:
    - Astorin has provided an updated RU locale

---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 10. 04. 2021
  Improvements:
    - Added light artillery that shoots launcher ammo that is modeled after an artillery turret with remote
  Migration:
    - Fuel emission multipliers moved to Rampant Industry
  Tweaks:
    - Shotgun turret range reduced by 29%
    - Reverted nuclear cell to vanilla stack size
    - Capsule turret damage bonus reduced by 50%
    - Increased breaking power for advanced and nuclear car and tank
    - Reduced nuclear tank speed by x4
    - Increased nuclear tank fuel consumption by x3
    - Increased nuclear car fuel consumption by x6.6