@@ -197,15 +197,15 @@ function vehicles.enable()
             order = "b[personal-transport]-b[zatank]",
             icon = "__RampantArsenal__/graphics/icons/advanced-tank.png",
             health = 3500,
-            consumption = "2.0MW",
+            consumption = "4.0MW",
             weight = 30000,
             inventorySize = 100,
             collisionBox = {{-1.5, -2.5}, {1.2, 1.8}},
             selectionBox = {{-1.7, -2.7}, {1.4, 2}},
             drawingBox = {{-3.4, -3.4}, {3.4, 2.8}},
-            brakingPower = "20MW",
+            brakingPower = "3MW",
             equipmentGrid = advTankGrid,
-            friction = 0.0022,
+            friction = 0.006,
             immuneToTrees = true,
             -- rotationSpeed = 0.0030,
             weapons = { advancedTankMachineGun, advancedTankCannon, advancedTankFlamethrower, advancedTankLauncher},
@@ -213,7 +213,7 @@ function vehicles.enable()
             energySource = {
                 fuel_category = "chemical",
                 effectivity = 0.85,
-                emissions_per_minute = 3,
+                emissions_per_minute = 20,
                 fuel_inventory_size = 2,
                 smoke =
                     {
@@ -440,17 +440,17 @@ function vehicles.enable()
             weapons = { nuclearTankMachineGun, nuclearTankCannon, nuclearTankFlamethrower, nuclearTankLauncher, nuclearTankRocket},
             immuneToTrees = true,
             health = 5000,
-            brakingForce = "720MW",
-            consumption = "30.0MW",
+            brakingForce = "80KW",
+            consumption = "150.0MW",
             weight = 40000,
-            friction = 0.02,
+            friction = 0.06,
             rotationSpeed = 0.0027,
             inventorySize = 180,
             tint = { r = 0.75, g = 0.85, b = 0.75, a = 1 },
             energySource = {
                 fuel_category = "nuclear",
                 effectivity = 0.9,
-                emissions_per_minute = 4,
+                emissions_per_minute = 30,
                 fuel_inventory_size = 2,
                 burnt_inventory_size = 2,
                 smoke =
@@ -606,18 +606,18 @@ function vehicles.enable()
             icon = "__RampantArsenal__/graphics/icons/advanced-car.png",
             immuneToTrees = true,
             health = 1200,
-            friction = 0.003,
+            friction = 0.02,
             weapons = {advancedCarMachineGun, advancedCarShotgun},
             effectivity = 0.80,
-            brakingForce = "1.2MW",
-            consumption = "1.0MW",
+            brakingForce = "250MW",
+            consumption = "3.0MW",
             weight = 1600,
             inventorySize = 130,
             energySource = {
                 fuel_category = "chemical",
                 effectivity = 0.6,
                 fuel_inventory_size = 1,
-                emissions_per_minute = 2,
+                emissions_per_minute = 15,
                 smoke =
                     {
                         {
@@ -762,10 +762,10 @@ function vehicles.enable()
             immuneToTrees = true,
             health = 2000,
             effectivity = 0.85,
-            friction = 0.004,
+            friction = 0.06,
             weapons = {nuclearCarMachineGun, nuclearCarShotgun, nuclearCarLauncher},
-            brakingForce = "4MW",
-            consumption = "10MW",
+            brakingForce = "30MW",
+            consumption = "30MW",
             weight = 2500,
             inventorySize = 200,
             icon = "__RampantArsenal__/graphics/icons/nuclear-car.png",
@@ -775,7 +775,7 @@ function vehicles.enable()
             energySource = {
                 fuel_category = "nuclear",
                 effectivity = 1,
-                emissions_per_minute = 3,
+                emissions_per_minute = 20,
                 fuel_inventory_size = 1,
                 burnt_inventory_size = 1,
                 smoke =
